# herdr-branch-cleanup

./: .coverage  .gitignore  AGENTS.md  Cargo.toml  README.md  herdr-plugin.toml  pyproject.toml  slophammer.yml
.cargo/: mutants.toml
.github/workflows/: ci.yml  release.yml
scripts/: check_mutation.py  run.py
src/: board.rs  cli.rs  core.rs  daemon.rs  gitio.rs  herdrio.rs  lib.rs  main.rs  procio.rs  sweep.rs  testsupport.rs
src/herdr_branch_cleanup/: __init__.py  board.py  cli.py  core.py  daemon.py  gitio.py  herdrio.py  procio.py  sweep.py
tests/: conftest.py  test_board.py  test_cli.py  test_core.py  test_daemon.py  test_gitio.py  test_herdrio.py  test_procio.py  test_sweep.py
