[package]
name = "herdr-branch-cleanup"
version = "0.2.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Herdr plugin: checkout the default branch when a pane's branch is merged or deleted on GitHub"
repository = "https://github.com/dutifuldev/herdr-branch-cleanup"
readme = "README.md"
keywords = ["herdr", "git", "branch", "cleanup", "plugin"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
cognitive_complexity = "deny"

[profile.release]
strip = true
