[project]
name = "herdr-branch-cleanup"
version = "0.1.0"
description = "Herdr plugin: checkout the default branch when a pane's branch is merged or deleted on GitHub"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "dutifuldev" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/dutifuldev/herdr-branch-cleanup"
Repository = "https://github.com/dutifuldev/herdr-branch-cleanup"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/herdr_branch_cleanup"]

[tool.hatch.build.targets.sdist]
exclude = ["mutants/"]

[dependency-groups]
dev = [
    "mutmut>=3.2",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "ty>=0.0.9",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C90",
    "ANN",
    "RUF",
    "TID",
]
# ANN401 stays on: no Any in signatures; escapes need `# noqa: ANN401 -- reason`.

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.per-file-ignores]
# Tests are exempt from annotation coverage by convention.
"tests/**" = ["ANN"]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.analysis]
respect-type-ignore-comments = false

[tool.ty.rules]
missing-type-argument = "error"
possibly-missing-attribute = "error"
possibly-unresolved-reference = "error"
possibly-missing-import = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/herdr_branch_cleanup"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mutmut]
source_paths = ["src/herdr_branch_cleanup/core.py"]
also_copy = [
    "src/herdr_branch_cleanup/__init__.py",
    "src/herdr_branch_cleanup/board.py",
    "src/herdr_branch_cleanup/cli.py",
    "src/herdr_branch_cleanup/daemon.py",
    "src/herdr_branch_cleanup/gitio.py",
    "src/herdr_branch_cleanup/herdrio.py",
    "src/herdr_branch_cleanup/procio.py",
    "src/herdr_branch_cleanup/py.typed",
    "src/herdr_branch_cleanup/sweep.py",
]
